--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
     "version": 2,
     "build": {
       "env": {
-        "NODE_VERSION": "11.0.0"
+        "NODE_VERSION": "22.x"
       }
     }
   }
